--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<h1>Privacy Policy</h1>
+('I', 'me')  refers to the software developer, who developed this android application.  
+<br><br>
+I built the Status Saver App as a free app . This SERVICE is provided by me
+ at no cost and is intended for
+use as is.
+This page is used to inform visitors
+regarding my policies with the collection,
+use, and disclosure of Personal
+Information if anyone decided to use my
+Service.
+<br><br>
+If you choose to use my Service, then
+you agree to the collection and use of
+information in relation to this policy. The
+Personal Information that I collect is used
+for providing and improving the Service.
+I will not use or share your information
+with anyone except as described in this
+Privacy Policy.
+<br><br>
+The terms used in this Privacy Policy
+have the same meanings as in our Terms
+and Conditions, which is accessible at
+Status Saver unless
+otherwise defined in this Privacy Policy.
+<br><br>
+<h3>Information Collection and Use</h3>
 
+<br><br>
+For a better experience, while using our
+Service, I may require you to provide
+us with certain personally identifiable
+information . The information that
+I request will be retained on your device
+and is not collected by me in any way.
+
+<br>
+
+
+<h3>Cookies</h3>
+
+Cookies are files with a small amount
+of data that are commonly used as
+anonymous unique identifiers. These are
+sent to your browser from the websites
+that you visit and are stored on your
+device's internal memory.
+
+<br>
+<br>
+This Service does not use these "cookies"
+explicitly. However, the app may use third
+party code and libraries in future that use "cookies"
+to collect information and improve
+their services but if app intigrates such services then you will be informed. You have the option to
+either accept or refuse these cookies
+and know when a cookie is being sent to
+your device. If you choose to refuse our
+cookies, you may not be able to use some
+portions of this Service.
+<br>
+<br>
+<h3>Service Providers</h3>
+
+I may employ third-party companies and
+individuals due to the following reasons:
+To facilitate our Service;
+To provide the Service on our behalf;
+To perform Service-related services; or
+To assist us in analyzing how our Service
+is used.
+<br>
+<br>
+
+
+<h3>Security</h3>
+
+
+I value your trust in providing us your
+Personal Information, thus we are
+striving to use commercially acceptable
+means of protecting it. But remember
+that no method of transmission over the
+internet, or method of electronic storage
+is 100% secure and reliable, and I cannot
+guarantee its absolute security.
+<br>
+<br>
+<h3>Permissions Required By The App</h3>
+    <b>&bull;android.permission.WRITE_EXTERNAL_STORAGE</b> this permission is required to save images in mediastore of phone. this is required upto api level 28 as after api level 28 we dont't require this permission anymore to insert images in mediastore created by  app.
+   <br>
+    <b>&bull; android.permission.READ_EXTERNAL_STORAGE</b> this permission is required to read files from particular directory in our storage. this is required upto api level 29 as after api level 29 ,we use document tree to obtain permission to read files of particular directory.
+   
+    <br><br>
+    <h3> Children's Privacy</h3>
+    <br>
+    <br>
+   
+    Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from anyone under the age of 13. If You are a parent or guardian and You are aware that Your child has provided Us with Personal Data, please contact Us. If We become aware that We have collected Personal Data from anyone under the age of 13 without verification of parental consent, We take steps to remove that information from Our servers.
+    <br>
+    <br>
+<h3>Links to Other Sites</h3>
+
+This Service may contain links to other
+sites. If you click on a third-party link, you
+will be directed to that site. Note that
+these external sites are not operated
+by me. Therefore, I strongly advise you
+to review the Privacy Policy of these
+websites. I have no control over and
+assume no responsibility for the content,
+privacy policies, or practices of any
+third-party sites or services.
+<br>
+<br>
+<h3>Contact Us</h3>
+<br>
+
+
+It should be noted that whether or not to send us your feedback or bug report is a completely voluntary initiative upon your own decision. If you have a concern about your personal data being misused, or if you want further information about our privacy policy and what it means, please feel free to email us at support anmolsoftwaredeveloper@gmail.com, we will endeavor to provide clear answers to your questions in a timely manner.
+
+</body>
+</html>
