--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ guarantee its absolute security.
 <br>
 <br>
 <h3>Permissions Required By The App</h3>
-    <b>&bull;android.permission.WRITE_EXTERNAL_STORAGE</b> this permission is required to save images in mediastore of phone. this is required upto api level 28 as after api level 28 we dont't require this permission anymore to insert images in mediastore created by  app.
+    <b>&bull;android.permission.WRITE_EXTERNAL_STORAGE</b> this permission is required to save images and videoes in shared storage of device. 
    <br>
     <b>&bull; android.permission.READ_EXTERNAL_STORAGE</b> this permission is required to read files from particular directory in our storage. this is required upto api level 29 as after api level 29 ,we use document tree to obtain permission to read files of particular directory.
    
